examples/should-fail/f45_impred_codomain_sort2_as_prop.lean
def demo4_bad_codomain_sort2_as_prop : Prop :=
  ((U : Sort 2) -> Sort 2 : Prop)
